--- a/SG545/index.html
+++ b/SG545/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>SeagGlider - SG545</title>
-		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 		<link rel="stylesheet" href="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.control.css"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.css">
 			<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"/>
