--- a/SG545/index.html
+++ b/SG545/index.html
@@ -1,52 +1,104 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<title>SeagGlider - SG545</title>
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-		<link rel="stylesheet" href="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.control.css"/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.css">
-			<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"/>
-			<script src="http://code.jquery.com/jquery-2.1.4.min.js"/>
-			<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
-			<style>#map-container { position: relative; height: 100%; width: 100%; } #map { position: relative; height: inherit; width: inherit; } .highcharts-figure, .highcharts-data-table table { min-width: 360px; max-width: 1000px; margin: 1em auto; } .highcharts-data-table table { font-family: Verdana, sans-serif; border-collapse: collapse; border: 1px solid #EBEBEB; margin: 10px auto; text-align: center; width: 100%; max-width: 500px; } .highcharts-data-table caption { padding: 1em 0; font-size: 1.2em; color: #555; } .highcharts-data-table th { font-weight: 600; padding: 0.5em; } .highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption { padding: 0.5em; } .highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) { background: #f8f8f8; } .highcharts-data-table tr:hover { background: #f1f7ff; } #daterangepicker { position: absolute; bottom: 10px; right: 20px; z-index: 1000; padding: 1em; background: white; }</style>
-	</head>
-	<body>
-		<div id="map-container" align="center">
-			<div id='map' align="center"/>
-		</div>
-		<script src="https://npmcdn.com/leaflet@1.6.0/dist/leaflet.js"/>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.js"/>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"/>
-		<!--leaflet-timedimension-->
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.js"/>
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.util.js"/>
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.layer.js"/>
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.layer.wms.js"/>
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.layer.geojson.js"/>
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.player.js"/>
-		<script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.control.js"/>
-		<!--HighCharts-->
-		<script src="https://code.highcharts.com/highcharts.js"/>
-		<script src="https://code.highcharts.com/modules/heatmap.js"/>
-		<script src="https://code.highcharts.com/modules/exporting.js"/>
-		<script src="https://code.highcharts.com/modules/data.js"/>
-		<script src="https://code.highcharts.com/modules/boost-canvas.js"/>
-		<script src="https://code.highcharts.com/modules/boost.js"/>
-		<script src="https://code.highcharts.com/modules/accessibility.js"/>
-		<!--DateRange Picker-->
-		<!--script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script-->
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"/>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"/>
-		<input id="daterangepicker" type="text" name="daterange">
-		<!--map-->
-		<script src='erddapGeoJson.js'/>
-		<figure class="highcharts-figure">
-			<div id="Temperature" style="width: 50%; float: left;"/>
-			<div id="Salinity" style="width: 50%; float: right;"/>
-			<div id="Density" style="width: 50%; float: left;"/>
-			<div id="Disolved Oxygen" style="width: 50%; float: right;"/>
-		</figure>
-		<script src='charts.js'/>
-		<script src="glider.js"/>
-	</body>
+<head>
+  <title>SeagGlider - SG545</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+  <link rel="stylesheet" href="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.control.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.css">
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+  <style>
+    #map-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    }
+
+    #map {
+        position: relative;
+        height: inherit;
+        width: inherit;
+    }
+    .highcharts-figure, .highcharts-data-table table {
+      min-width: 360px; 
+      max-width: 1000px;
+      margin: 1em auto;
+  }
+  .highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #EBEBEB;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+  }
+  .highcharts-data-table caption {
+      padding: 1em 0;
+      font-size: 1.2em;
+      color: #555;
+  }
+  .highcharts-data-table th {
+    font-weight: 600;
+      padding: 0.5em;
+  }
+  .highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+      padding: 0.5em;
+  }
+  .highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+      background: #f8f8f8;
+  }
+  .highcharts-data-table tr:hover {
+      background: #f1f7ff;
+  }
+  #daterangepicker {
+			position: absolute;
+			bottom: 10px;
+			right: 20px;
+			z-index: 1000;
+			padding: 1em;
+			background: white;
+		}
+  </style>
+</head>
+<body>
+    <div id="map-container" align="center">
+        <div id='map' align="center">
+        </div>
+    </div>
+    <script src="https://npmcdn.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.fullscreen/1.4.2/Control.FullScreen.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
+    <!--leaflet-timedimension-->
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.js"></script>
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.util.js"></script>
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.layer.js"></script>
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.layer.wms.js"></script>
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.layer.geojson.js"></script>
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.player.js"></script>
+    <script type="text/javascript" src="https://irishmarineinstitute.github.io/erddap-js/demo/02-leaflet-time-dimension-velocity/leaflet.timedimension.control.js"></script>
+    <!--HighCharts-->
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/heatmap.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script>
+    <script src="https://code.highcharts.com/modules/boost-canvas.js"></script>
+    <script src="https://code.highcharts.com/modules/boost.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <!--DateRange Picker-->
+    <!--script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <input id = "daterangepicker" type="text" name="daterange">
+    <!--map-->
+    <script src='erddapGeoJson.js'></script>
+    <figure class="highcharts-figure">
+      <div id="Temperature" style="width: 50%; float: left;"></div>
+      <div id="Salinity" style="width: 50%; float: right;"></div>
+      <div id="Density" style="width: 50%; float: left;"></div>
+      <div id="Disolved Oxygen" style="width: 50%; float: right;"></div>
+    </figure>
+    <script src='charts.js'></script>
+    <script src="glider.js"></script>
+    
+</body>
 </html>
